--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -20,9 +20,11 @@
     <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
     <nav>
       <ul>
-        <li>projets</li>
-        <li>contact</li>
-        <li class="logIcn">login</li>
+        <li><a href="index.html" class="link">projets</a></li>
+        <li><a href="#" class="link">contact</a></li>
+        <li>
+          <a href="login.html" class="link">login</a>
+        </li>
         <li><img src="./assets/icons/instagram.png" alt="Instagram" /></li>
       </ul>
     </nav>
