--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -19,7 +19,7 @@
       <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
       <nav>
         <ul>
-          <li><a href="index.html" class="link">projets</a></li>
+          <li><a href="index.html" id="mainpage" class="link">projets</a></li>
           <li><a href="#" class="link">contact</a></li>
           <li>
             <a href="login.html" class="link">login</a>
