--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -16,13 +16,14 @@
   </head>
   <body>
     <header>
+      <div class="bannerEditor"></div>
       <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
       <nav>
         <ul>
           <li><a href="index.html" id="mainpage" class="link">projets</a></li>
           <li><a href="#" class="link">contact</a></li>
           <li>
-            <a href="login.html" class="link">login</a>
+            <a href="login.html" class="login">login</a>
           </li>
           <li><img src="./assets/icons/instagram.png" alt="Instagram" /></li>
         </ul>
@@ -54,6 +55,7 @@
       </section>
       <section id="portfolio">
         <h2>Mes Projets</h2>
+        <div class="Modif"></div>
         <div class="filters"></div>
         <div class="gallery"></div>
       </section>
