--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -15,7 +15,7 @@
     <script src="./assets/javascript/index.js" defer></script>
   </head>
   <body>
-    <div class="bannerEditor"></div>
+    <div class="banner"></div>
     <header>
       <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
       <nav>
@@ -54,7 +54,10 @@
         </article>
       </section>
       <section id="portfolio">
-        <h2>Mes Projets</h2>
+        <h2 class="myprojects">
+          Mes Projets
+          <div class="Modif"></div>
+        </h2>
         <div class="Modif"></div>
         <div class="filters"></div>
         <div class="gallery"></div>
