--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -12,7 +12,12 @@
     />
     <meta name="description" content="" />
     <link rel="stylesheet" href="./assets/style.css" />
+    <script
+      src="https://kit.fontawesome.com/ffb3605d91.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="./assets/javascript/index.js" defer></script>
+    <script src="./assets/javascript/modal.js" defer></script>
   </head>
   <body>
     <div class="banner"></div>
@@ -23,7 +28,7 @@
           <li><a href="index.html" id="mainpage" class="link">projets</a></li>
           <li><a href="#" class="link">contact</a></li>
           <li>
-            <a href="login.html" class="login">login</a>
+            <a href="#" class="login">login</a>
           </li>
           <li><img src="./assets/icons/instagram.png" alt="Instagram" /></li>
         </ul>
@@ -53,6 +58,7 @@
           </p>
         </article>
       </section>
+      <div class="modalContainer"></div>
       <section id="portfolio">
         <h2 class="myprojects">
           Mes Projets
@@ -76,7 +82,6 @@
         </form>
       </section>
     </main>
-
     <footer>
       <nav>
         <ul>
